update midterm files

--- a/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.html
+++ b/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.html
@@ -26,8 +26,8 @@
             <div class="plans-area">
                 <div class="plans-contents-area"></div>
                 <div class="plans-buttons-area">
-                    <button class="button">정렬</button>
-                    <button class="button">모두 삭제</button>
+                    <button class="sort button">정렬</button>
+                    <button class="all-remove button">모두 삭제</button>
                 </div>
             </div>
         </template>
@@ -37,10 +37,8 @@
                     <div class="name"></div>
                     <div class="tag"></div>
                 </div>
-                <div class="plan-clock-area">
-                    <span class="hour">00</span> : 
-                    <span class="minute">00</span> : 
-                    <span class="seconde">00</span>
+                <div class="clock-area">
+                    00 : 00 : 00
                 </div>
                 <div class="plan-buttons-area">
                     <button class="start button">시작</button>
@@ -54,7 +52,7 @@
         <template id="results-area">
             <div class="results-area">
                 <div class="results-contents-area"></div>
-                <div class="results-info-area"></div>
+                <div class="clock-area total">00 : 00 : 00</div>
             </div>
         </template>
         <template id="result-tag-area">
