--- a/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.html
+++ b/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.html
@@ -65,7 +65,7 @@
         </template>
         <template id="result-tag-area">
             <div class="result-tag-area">
-                <div class="result-tag">ss</div>
+                <div class="result-tag"></div>
                 <div class="clock-area tags">00 : 00 : 00</div>
             </div>
         </template>
