--- a/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/study/class-study.html
+++ b/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/study/class-study.html
@@ -10,6 +10,7 @@
 		</style>
 	</head>
 	<body>
+		<p class="content"></p>
 		<script>
 			window.onload=function() {
     			document.onclick=processClick;
