--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
@@ -7,6 +7,34 @@
 	</head>
 	<body>
 		<!-- TODO: 이 곳을 채워 클라이언트를 만들어 보세요 -->
+		<section class="app"></section>
+		
+		<template id="menubar">
+			<div class="menubar">
+				<ul>
+					<li><input class="new-file" type="button"></li>
+					<li><input class="open" type="file"></li>
+					<li><input class="save" type="button"></li>
+					<li><input class="modify" type="button"></li>
+					<li><input class="delete" type="button"></li>
+				</ul>
+			</div>
+		</template>
+		<template id="tabs">
+			<div class="tabs">
+
+			</div>
+		</template>
+		<template id="tab">
+			<div class="tab">
+
+			</div>
+		</template>
+		<template id="content">
+			<div class="content">
+				
+			</div>
+		</template>
 		<script>
 			let notepad = new Notepad();
 		</script>
