--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/style.css">
-		<script src="/notepad.js"></script>
+		<link rel="stylesheet" href="./style.css">
+		<script src="./notepad.js"></script>
 	</head>
 	<body>
 		<!-- TODO: 이 곳을 채워 클라이언트를 만들어 보세요 -->
@@ -11,12 +11,12 @@
 		
 		<template id="menubar">
 			<div class="menubar">
-				<ul>
-					<li><input class="new-file" type="button"></li>
+				<ul class="flex">
+					<li><button class="new-file" type="button" value="dd"></li>
 					<li><input class="open" type="file"></li>
-					<li><input class="save" type="button"></li>
-					<li><input class="modify" type="button"></li>
-					<li><input class="delete" type="button"></li>
+					<li><button class="save" type="button" value="dd"></li>
+					<li><button class="modify" type="button" value="dd"></li>
+					<li><button class="delete" type="button" value="dd"></li>
 				</ul>
 			</div>
 		</template>
