--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
@@ -12,11 +12,13 @@
 		<template id="menubar">
 			<div class="menubar">
 				<ul class="flex">
-					<li><button class="new-file" type="button" value="dd"></li>
-					<li><input class="open" type="file"></li>
-					<li><button class="save" type="button" value="dd"></li>
-					<li><button class="modify" type="button" value="dd"></li>
-					<li><button class="delete" type="button" value="dd"></li>
+					<li><button class="new-file" type="button">새 파일</button></li>
+					<li>
+						<label for="open">열기</lable>
+						<input id="open" class="open" type="file">
+					</li>
+					<li><button class="save" type="button">저장</button></li>
+					<li><button class="delete" type="button">삭제</button></li>
 				</ul>
 			</div>
 		</template>
@@ -26,13 +28,13 @@
 			</div>
 		</template>
 		<template id="tab">
-			<div class="tab">
+			<button class="tab">
 
-			</div>
+			</button>
 		</template>
 		<template id="content">
 			<div class="content">
-				
+				<textarea name="content" class="write-space display-out"></textarea>
 			</div>
 		</template>
 		<script>
