--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
@@ -30,9 +30,9 @@
 			</div>
 		</template>
 		<template id="tab">
-			<div class="tab">
+			<div class="tab focus">
 				<span class="tab-name"></span>
-				<button class="close invisible"></button>
+				<object class="close" data="windowclose.svg" type="image/svg+xml">
 			</div>
 		</template>
 		<template id="content">
