--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
@@ -2,11 +2,46 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/style.css">
-		<script src="/notepad.js"></script>
+		<link rel="stylesheet" href="./style.css">
+		<script src="./notepad.js"></script>
 	</head>
 	<body>
 		<!-- TODO: 이 곳을 채워 클라이언트를 만들어 보세요 -->
+		<section class="app"></section>
+		
+		<template id="menubar">
+			<div class="menubar">
+				<ul class="flex">
+					<li>
+						<button class="new-file" type="button">새 파일</button>
+					</li>
+					<li>
+						<label for="open">열기</lable>
+						<input id="open" class="open" type="file">
+					</li>
+					<li><button class="save" type="button">저장</button></li>
+					<li><button class="delete" type="button">삭제</button></li>
+				</ul>
+			</div>
+		</template>
+		<template id="tabs">
+			<div class="tabs">
+
+			</div>
+		</template>
+		<template id="tab">
+			<div class="tab focus">
+				<span class="tab-name"></span>
+				<div class='close'>
+					<img src="windowclose.svg">
+				</div>
+			</div>
+		</template>
+		<template id="content">
+			<div class="content">
+				<textarea name="content" class="write-space"></textarea>
+			</div>
+		</template>
 		<script>
 			let notepad = new Notepad();
 		</script>
