--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
@@ -13,20 +13,22 @@
 			<div class="menubar">
 				<ul class="flex">
 					<li>
-						<button class="new-file" type="button">새 파일</button>
+						<button class="new-file">새 파일</button>
 					</li>
 					<li>
 						<label for="open">열기</lable>
 						<input id="open" class="open" type="file">
 					</li>
-					<li><button class="save" type="button">저장</button></li>
-					<li><button class="delete" type="button">삭제</button></li>
+					<li><button class="save">저장</button></li>
+					<li><button class="delete">삭제</button></li>
+					<li><button class="login">로그인</button></li>
 				</ul>
 			</div>
 		</template>
 		<template id="tabs">
-			<div class="tabs">
-
+			<div class="tabs-area">
+				<div class="tabs"></div>
+				<div class="login-check"></div>
 			</div>
 		</template>
 		<template id="tab">
@@ -40,6 +42,15 @@
 		<template id="content">
 			<div class="content">
 				<textarea name="content" class="write-space"></textarea>
+			</div>
+		</template>
+		<template id="login">
+			<div class="login-form invisible">
+				<label>Username</label>
+				<input type="text" name="login">
+				<label>Password</label>
+				<input type="password" name="password">
+				<input type="button" name="" value="로그인">
 			</div>
 		</template>
 		<script>
