--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
@@ -46,11 +46,18 @@
 		</template>
 		<template id="login">
 			<div class="login-form invisible">
-				<label>Username</label>
-				<input type="text" name="login">
-				<label>Password</label>
-				<input type="password" name="password">
-				<input type="button" name="" value="로그인">
+				<form action="/login" method="POST">
+					<div class="login-table">
+						<span>Username</span>
+						<input type="text" name="login">
+						<span>Password</span>
+						<input type="password" name="password">
+						<div class="blank"></div>
+						<div class="submit-area">
+							<input class="submit" type="submit" name="">
+						</div>
+					</div>
+				</form>
 			</div>
 		</template>
 		<script>
