--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
@@ -21,7 +21,8 @@
 					</li>
 					<li><button class="save">저장</button></li>
 					<li><button class="delete">삭제</button></li>
-					<li><button class="login">로그인</button></li>
+					<li class="loginli"><button class="login">로그인</button></li>
+					<li class="logoutli invisible"><button class="logout">로그아웃</button></li>
 				</ul>
 			</div>
 		</template>
