--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/client/index.html
@@ -1,66 +1,60 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="./style.css">
-		<script src="./notepad.js"></script>
-	</head>
-	<body>
-		<!-- TODO: 이 곳을 채워 클라이언트를 만들어 보세요 -->
-		<section class="app"></section>
-		
-		<template id="menubar">
-			<div class="menubar">
-				<ul class="flex">
-					<li>
-						<button class="new-file">새 파일</button>
-					</li>
-					<li>
-						<label for="open">열기</lable>
+
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="/client/style.css">
+	<script src="/client/notepad.js"></script>
+</head>
+
+<body>
+	<!-- TODO: 이 곳을 채워 클라이언트를 만들어 보세요 -->
+	<section class="app"></section>
+
+	<template id="menubar">
+		<div class="menubar">
+			<ul class="flex">
+				<li>
+					<button class="new-file">새 파일</button>
+				</li>
+				<li>
+					<label for="open">열기</lable>
 						<input id="open" class="open" type="file">
-					</li>
-					<li><button class="save">저장</button></li>
-					<li><button class="delete">삭제</button></li>
-					<li class="loginli"><button class="login">로그인</button></li>
-					<li class="logoutli invisible"><button class="logout">로그아웃</button></li>
-				</ul>
+				</li>
+				<li>
+					<button class="save">저장</button>
+				</li>
+				<li>
+					<button class="delete">삭제</button>
+				</li>
+				<li class="logoutli">
+					<button class="logout">로그아웃</button>
+				</li>
+			</ul>
+		</div>
+	</template>
+	<template id="tabs">
+		<div class="tabs-area">
+			<div class="tabs"></div>
+			<div class="login-check"></div>
+		</div>
+	</template>
+	<template id="tab">
+		<div class="tab focus">
+			<span class="tab-name"></span>
+			<div class='close'>
+				<img src="/client/windowclose.svg">
 			</div>
-		</template>
-		<template id="tabs">
-			<div class="tabs-area">
-				<div class="tabs"></div>
-				<div class="login-check"></div>
-			</div>
-		</template>
-		<template id="tab">
-			<div class="tab focus">
-				<span class="tab-name"></span>
-				<div class='close'>
-					<img src="windowclose.svg">
-				</div>
-			</div>
-		</template>
-		<template id="content">
-			<div class="content">
-				<textarea name="content" class="write-space" readonly></textarea>
-			</div>
-		</template>
-		<template id="login">
-			<div class="login-form invisible">
-				<div class="login-table">
-					<span>Username</span>
-					<input class="input" type="text" name="name" autocomplete="off">
-					<span>Password</span>
-					<input class="input" type="password" name="password">
-					<div class="blank"></div>
-					<div class="submit-area">
-						<button class="submit" name="">로그인</button>
-					</div>
-				</div>
-			</div>
-		</template>
-		<script>
-			let notepad = new Notepad();
-		</script>
-	</body>
+		</div>
+	</template>
+	<template id="content">
+		<div class="content">
+			<textarea name="content" class="write-space" readonly></textarea>
+		</div>
+	</template>
+	<script>
+		let notepad = new Notepad();
+	</script>
+</body>
+
 </html>
