update sequelize notepad

--- a/Part 4. Database/Quest 15. ORM/skeleton/client/index.html
+++ b/Part 4. Database/Quest 15. ORM/skeleton/client/index.html
@@ -18,8 +18,8 @@
 					<button class="new-file">새 파일</button>
 				</li>
 				<li>
-					<label for="open">열기</lable>
-						<input id="open" class="open" type="file">
+					<!-- <label for="open">열기</lable> -->
+					<button class="open">열기</button>
 				</li>
 				<li>
 					<button class="save">저장</button>
@@ -31,7 +31,10 @@
 					<button class="logout">로그아웃</button>
 				</li>
 			</ul>
+			<div class='files invisible'>
+			</div>
 		</div>
+		
 	</template>
 	<template id="tabs">
 		<div class="tabs-area">
