update notepad -vue

--- a/Part 5. Web 2018/Quest 16. Vue.js/vue_study/3장/watch.html
+++ b/Part 5. Web 2018/Quest 16. Vue.js/vue_study/3장/watch.html
@@ -9,6 +9,7 @@
 <body>
     <div id="app">
         <input v-model="message">
+        {{message}}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2/dist/vue.js"></script>
     <script>
